# DailyServer

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: test.yaml
deploy/: Dockerfile  build_docker.sh
packaging/: daily_server.service  postinst
server/: config.json
server/html/: index.html
src/: main.rs
src/endpoints/: api.rs  general_get.rs  mod.rs
src/state/: database.rs  mod.rs  rest_state.rs
src/util/: config.rs  daily_seed.rs  graceful_shutdown.rs  mod.rs
