[package]
name = "daily_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
spdlog-rs = "0.5.3"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
