[package]
name = "daily_server"
version = "0.1.0"
description = "Daily server"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
spdlog-rs = "0.5.3"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
ignore = "0.4.26"
tempfile = "3.27.0"
chrono = "0.4.45"
rand = "0.10.1"

[package.metadata.deb]
maintainer = "Paolo Mazzon <pdmazzon@gmail.com>"
copyright = "2026, Paolo Mazzon <pdmazzon@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = "Daily server"
depends = "$auto"
section = "utility"
priority = "optional"
maintainer-scripts = "packaging/"
systemd-units = [ { unit-name = "daily_server", enable = true } ]
assets = [
    ["target/release/daily_server", "usr/bin/", "755"],
    ["server/*", "opt/daily_server/", "644"],
    ["server/site/*", "opt/daily_server/site", "644"],
]
